tests/rosetta/out/Rust/csv-data-manipulation.error
rustc: exit status 1
error[E0308]: mismatched types
  --> /tmp/csv-data-manipulation.rs:41:79
   |
41 |         rows[i as usize] = { let mut tmp = rows[i as usize].clone(); tmp.push(sum.to_string()); tmp };
   |                                                                          ---- ^^^^^^^^^^^^^^^ expected `&str`, found `String`
   |                                                                          |
   |                                                                          arguments to this method are incorrect
   |
note: method defined here
  --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/alloc/src/vec/mod.rs:2442:12
help: consider borrowing here
   |
41 |         rows[i as usize] = { let mut tmp = rows[i as usize].clone(); tmp.push(&sum.to_string()); tmp };
   |                                                                               +

error[E0308]: mismatched types
  --> /tmp/csv-data-manipulation.rs:13:16
   |
3  |     fn join(xs: Vec<&'static str>, sep: &'static str) -> &'static str {
   |                                                          ------------ expected `&'static str` because of return type
...
13 |         return res;
   |                ^^^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
13 |         return &res;
   |                +

error[E0308]: mismatched types
  --> /tmp/csv-data-manipulation.rs:25:60
   |
25 |             n = n * 10 + *digits.get(&&str[i as usize..i + 1 as usize]).unwrap();
   |                                                            ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
  --> /tmp/csv-data-manipulation.rs:25:56
   |
25 |             n = n * 10 + *digits.get(&&str[i as usize..i + 1 as usize]).unwrap();
   |                                                        ^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot add `usize` to `i32`
  --> /tmp/csv-data-manipulation.rs:25:58
   |
25 |             n = n * 10 + *digits.get(&&str[i as usize..i + 1 as usize]).unwrap();
   |                                                          ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
